Fix terminal jumping down issue

--- a/app/assets/stylesheets/problems.css.sass
+++ b/app/assets/stylesheets/problems.css.sass
@@ -32,9 +32,10 @@ pre.repl-log
             border-radius: 0px
             border: 0
             border-top: 1px solid #555
+            overflow: hidden
 
 .editor
-    height: 60% !important
+    height: 50% !important
     overflow: hide
     .ace_editor
         height: 100% !important
